add httpBody example
