# api_pb/api.pb.go
@@ -7,8 +7,10 @@ import (
 	context "context"
 	fmt "fmt"
 	proto "github.com/golang/protobuf/proto"
+	empty "github.com/golang/protobuf/ptypes/empty"
 	_struct "github.com/golang/protobuf/ptypes/struct"
 	_ "google.golang.org/genproto/googleapis/api/annotations"
+	httpbody "google.golang.org/genproto/googleapis/api/httpbody"
 	grpc "google.golang.org/grpc"
 	codes "google.golang.org/grpc/codes"
 	status "google.golang.org/grpc/status"
@@ -273,34 +275,38 @@ func init() {
 func init() { proto.RegisterFile("api.proto", fileDescriptor_00212fb1f9d3bf1c) }
 
 var fileDescriptor_00212fb1f9d3bf1c = []byte{
-	// 428 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x74, 0x52, 0xd1, 0x6a, 0xdb, 0x30,
-	0x14, 0x45, 0x49, 0x93, 0xe0, 0xdb, 0xb2, 0x35, 0x97, 0xd0, 0x7a, 0x66, 0xb0, 0x60, 0xf6, 0x60,
-	0x18, 0xb3, 0xb7, 0xec, 0x61, 0xa3, 0x0f, 0x83, 0x66, 0xf4, 0x07, 0x1c, 0xe8, 0x6b, 0x91, 0x15,
-	0x2d, 0x11, 0x0d, 0x92, 0x2b, 0xc9, 0x81, 0x32, 0xf6, 0xb2, 0x5f, 0xd8, 0xef, 0xec, 0x69, 0xfb,
-	0x84, 0xfd, 0xc2, 0x3e, 0x64, 0x44, 0xb2, 0x4c, 0x68, 0xd3, 0x37, 0x5d, 0x9d, 0xa3, 0x73, 0x7d,
-	0xce, 0x31, 0x44, 0xb4, 0x16, 0x79, 0xad, 0x95, 0x55, 0x38, 0xa4, 0xb5, 0xb8, 0xa9, 0xab, 0xe4,
-	0xe5, 0x4a, 0xa9, 0xd5, 0x86, 0x17, 0xb4, 0x16, 0x05, 0x95, 0x52, 0x59, 0x6a, 0x85, 0x92, 0xc6,
-	0xb3, 0x3a, 0xd4, 0x4d, 0x55, 0xf3, 0xb5, 0x30, 0x56, 0x37, 0xcc, 0x7a, 0x34, 0x9d, 0xc3, 0xb3,
-	0xcb, 0xe5, 0x52, 0x73, 0x63, 0x4a, 0x7e, 0xd7, 0x70, 0x63, 0x31, 0x86, 0x11, 0xf5, 0x37, 0x31,
-	0x99, 0x92, 0x2c, 0x2a, 0xc3, 0x88, 0x67, 0x30, 0x5c, 0x73, 0xb1, 0x5a, 0xdb, 0xb8, 0x37, 0x25,
-	0xd9, 0x51, 0xd9, 0x4e, 0xe9, 0x2f, 0x02, 0xcf, 0x3b, 0x11, 0x53, 0x2b, 0x69, 0x38, 0x7e, 0x86,
-	0x51, 0x45, 0x37, 0x54, 0x32, 0x1e, 0x93, 0x69, 0x3f, 0x3b, 0x9e, 0xbd, 0xce, 0xfd, 0xd7, 0xe6,
-	0x0f, 0x98, 0xf9, 0xdc, 0xd3, 0xae, 0xa4, 0xd5, 0xf7, 0x65, 0x78, 0x84, 0x6f, 0x01, 0xad, 0xa6,
-	0xd2, 0x50, 0xe6, 0xbc, 0xdc, 0x30, 0xd5, 0x48, 0xbf, 0x37, 0x2a, 0xc7, 0xfb, 0xc8, 0x97, 0x1d,
-	0x90, 0x5c, 0xc0, 0xc9, 0xbe, 0x0e, 0x9e, 0x42, 0xff, 0x96, 0xdf, 0xb7, 0x06, 0x76, 0x47, 0x9c,
-	0xc0, 0x60, 0x4b, 0x37, 0x0d, 0x6f, 0x35, 0xfc, 0x70, 0xd1, 0xfb, 0x44, 0xd2, 0x0c, 0x4e, 0x17,
-	0x4d, 0x65, 0x98, 0x16, 0x15, 0x0f, 0x21, 0x4c, 0x60, 0x70, 0xd7, 0x70, 0x1d, 0x14, 0xfc, 0x90,
-	0xfe, 0x26, 0x30, 0xde, 0xa3, 0xb6, 0x56, 0x0f, 0x72, 0xf1, 0x0d, 0x1c, 0x2d, 0xa9, 0xa5, 0x6e,
-	0xdd, 0xf1, 0xec, 0x3c, 0xf7, 0x2d, 0xe4, 0xa1, 0x85, 0x7c, 0xe1, 0x5a, 0x28, 0x1d, 0x09, 0x3f,
-	0xc2, 0x90, 0x6f, 0xb9, 0xb4, 0x26, 0xee, 0xbb, 0xb0, 0x5e, 0x85, 0xb0, 0x1e, 0x6d, 0xcb, 0xaf,
-	0x76, 0xbc, 0xb2, 0xa5, 0x27, 0xef, 0x61, 0xe0, 0x2e, 0x0e, 0x18, 0x3e, 0xeb, 0x34, 0x7b, 0xd3,
-	0x7e, 0x16, 0x85, 0x27, 0xb3, 0x3f, 0x04, 0xc6, 0xf3, 0x8d, 0x62, 0xb7, 0x6c, 0x4d, 0x85, 0x5c,
-	0x70, 0xbd, 0x15, 0x8c, 0xe3, 0x35, 0x8c, 0x2e, 0x43, 0xcd, 0x8f, 0x9a, 0x72, 0x99, 0x24, 0xe7,
-	0x4f, 0x34, 0x98, 0x26, 0x3f, 0xfe, 0xfe, 0xfb, 0xd9, 0x9b, 0x20, 0x16, 0xed, 0x9f, 0x52, 0x7c,
-	0x6b, 0x0f, 0xdf, 0xf1, 0x1a, 0xa2, 0xce, 0x03, 0xc6, 0x07, 0x6c, 0x79, 0xed, 0x17, 0x4f, 0x1a,
-	0x4e, 0xd1, 0xa9, 0x9f, 0x20, 0x14, 0x26, 0x60, 0xef, 0x48, 0x35, 0x74, 0x41, 0x7e, 0xf8, 0x1f,
-	0x00, 0x00, 0xff, 0xff, 0xb2, 0xd4, 0x7e, 0x45, 0x0f, 0x03, 0x00, 0x00,
+	// 495 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x74, 0x53, 0xc1, 0x6e, 0xd3, 0x40,
+	0x10, 0x95, 0x93, 0x36, 0x91, 0x27, 0x11, 0x34, 0xa3, 0x28, 0x75, 0x0d, 0x12, 0x91, 0xc5, 0x21,
+	0x12, 0xc2, 0x86, 0x70, 0x00, 0xf5, 0x80, 0xd4, 0x40, 0x10, 0x37, 0x24, 0x47, 0xea, 0xb5, 0x5a,
+	0xdb, 0xdb, 0x64, 0x55, 0xb3, 0xeb, 0x7a, 0xd7, 0x81, 0x08, 0x71, 0xe1, 0x17, 0xe0, 0x73, 0x38,
+	0xf1, 0x0b, 0xfc, 0x02, 0x1f, 0x82, 0xbc, 0xde, 0x8d, 0xa2, 0x26, 0xbd, 0x79, 0xf6, 0xbd, 0x79,
+	0xb3, 0xf3, 0xde, 0x1a, 0x5c, 0x52, 0xb0, 0xb0, 0x28, 0x85, 0x12, 0xd8, 0x21, 0x05, 0xbb, 0x2a,
+	0x12, 0xff, 0xf1, 0x52, 0x88, 0x65, 0x4e, 0x23, 0x52, 0xb0, 0x88, 0x70, 0x2e, 0x14, 0x51, 0x4c,
+	0x70, 0xd9, 0xb0, 0xb6, 0xa8, 0xae, 0x92, 0xea, 0x3a, 0x92, 0xaa, 0xac, 0x52, 0x65, 0xd0, 0xb3,
+	0x9d, 0xde, 0x95, 0x52, 0x45, 0x22, 0xb2, 0x8d, 0x81, 0x1e, 0xdd, 0x6d, 0xa4, 0x9f, 0x0b, 0x65,
+	0xc0, 0x60, 0x06, 0x0f, 0x2e, 0xb2, 0xac, 0xa4, 0x52, 0xc6, 0xf4, 0xb6, 0xa2, 0x52, 0xa1, 0x07,
+	0x5d, 0xd2, 0x9c, 0x78, 0xce, 0xd8, 0x99, 0xb8, 0xb1, 0x2d, 0x71, 0x04, 0x9d, 0x15, 0x65, 0xcb,
+	0x95, 0xf2, 0x5a, 0x63, 0x67, 0x72, 0x14, 0x9b, 0x2a, 0xf8, 0xed, 0xc0, 0xc3, 0xad, 0x88, 0x2c,
+	0x04, 0x97, 0x14, 0xdf, 0x42, 0x37, 0x21, 0x39, 0xe1, 0x29, 0xf5, 0x9c, 0x71, 0x7b, 0xd2, 0x9b,
+	0x3e, 0x0d, 0x9b, 0x2d, 0xc3, 0x3b, 0xcc, 0x70, 0xd6, 0xd0, 0xe6, 0x5c, 0x95, 0x9b, 0xd8, 0x36,
+	0xe1, 0x73, 0x40, 0x55, 0x12, 0x2e, 0x49, 0xaa, 0x3d, 0xb8, 0x4a, 0x45, 0xc5, 0x9b, 0xb9, 0x6e,
+	0x3c, 0xd8, 0x45, 0xde, 0xd5, 0x80, 0x7f, 0x0e, 0xfd, 0x5d, 0x1d, 0x3c, 0x81, 0xf6, 0x0d, 0xdd,
+	0x98, 0x05, 0xea, 0x4f, 0x1c, 0xc2, 0xf1, 0x9a, 0xe4, 0x15, 0x35, 0x1a, 0x4d, 0x71, 0xde, 0x7a,
+	0xe3, 0x04, 0x13, 0x38, 0x59, 0x54, 0x89, 0x4c, 0x4b, 0x96, 0x50, 0x6b, 0xc2, 0x10, 0x8e, 0x6f,
+	0x2b, 0x5a, 0x5a, 0x85, 0xa6, 0x08, 0xfe, 0x38, 0x30, 0xd8, 0xa1, 0x9a, 0x55, 0x0f, 0x72, 0xf1,
+	0x19, 0x1c, 0x65, 0x44, 0x11, 0x3d, 0xae, 0x37, 0x3d, 0x0d, 0x9b, 0x10, 0x42, 0x1b, 0x42, 0xb8,
+	0xd0, 0xe9, 0xc5, 0x9a, 0x84, 0xaf, 0xa1, 0x43, 0xd7, 0x94, 0x2b, 0xe9, 0xb5, 0xb5, 0x59, 0x4f,
+	0xac, 0x59, 0x7b, 0xd3, 0xc2, 0x79, 0xcd, 0x8b, 0x0d, 0xdd, 0x7f, 0x09, 0xc7, 0xfa, 0xe0, 0xc0,
+	0xc2, 0xa3, 0xad, 0x66, 0x6b, 0xdc, 0x9e, 0xb8, 0xb6, 0x65, 0xfa, 0xab, 0x05, 0x83, 0x59, 0x2e,
+	0xd2, 0x9b, 0x74, 0x45, 0x18, 0x5f, 0xd0, 0x72, 0xcd, 0x52, 0x8a, 0x97, 0xd0, 0xbd, 0xb0, 0x31,
+	0xef, 0x25, 0xa5, 0x3d, 0xf1, 0x4f, 0xef, 0x49, 0x30, 0xf0, 0x7f, 0xfc, 0xfd, 0xf7, 0xb3, 0x35,
+	0x44, 0x8c, 0xcc, 0x4b, 0x89, 0xbe, 0x99, 0x8f, 0xef, 0xf8, 0x09, 0xfa, 0xef, 0xc5, 0x17, 0x9e,
+	0x0b, 0x92, 0x7d, 0x60, 0x39, 0xc5, 0xd1, 0x9e, 0x11, 0xf3, 0xfa, 0x35, 0xfa, 0x43, 0x7b, 0x5e,
+	0xff, 0x16, 0x1f, 0x95, 0x2a, 0x66, 0x22, 0xdb, 0x04, 0x03, 0xad, 0xdc, 0x43, 0x37, 0xba, 0x66,
+	0x39, 0x0d, 0xd5, 0x57, 0x85, 0x97, 0xe0, 0x6e, 0x4d, 0x41, 0xef, 0x80, 0x4f, 0xcd, 0x65, 0xcf,
+	0xee, 0x75, 0x30, 0x40, 0x2d, 0xda, 0x47, 0x88, 0xa4, 0xc5, 0x5e, 0x38, 0x49, 0x47, 0x5f, 0xe8,
+	0xd5, 0xff, 0x00, 0x00, 0x00, 0xff, 0xff, 0xab, 0x37, 0x17, 0x38, 0x98, 0x03, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -316,6 +322,7 @@ const _ = grpc.SupportPackageIsVersion4
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://godoc.org/google.golang.org/grpc#ClientConn.NewStream.
 type BlockchainServiceClient interface {
 	Address(ctx context.Context, in *AddressRequest, opts ...grpc.CallOption) (*AddressResponse, error)
+	DownloadFile(ctx context.Context, in *empty.Empty, opts ...grpc.CallOption) (*httpbody.HttpBody, error)
 	Subscribe(ctx context.Context, in *SubscribeRequest, opts ...grpc.CallOption) (BlockchainService_SubscribeClient, error)
 }
 
@@ -330,6 +337,15 @@ func NewBlockchainServiceClient(cc *grpc.ClientConn) BlockchainServiceClient {
 func (c *blockchainServiceClient) Address(ctx context.Context, in *AddressRequest, opts ...grpc.CallOption) (*AddressResponse, error) {
 	out := new(AddressResponse)
 	err := c.cc.Invoke(ctx, "/api_pb.BlockchainService/Address", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *blockchainServiceClient) DownloadFile(ctx context.Context, in *empty.Empty, opts ...grpc.CallOption) (*httpbody.HttpBody, error) {
+	out := new(httpbody.HttpBody)
+	err := c.cc.Invoke(ctx, "/api_pb.BlockchainService/DownloadFile", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -371,6 +387,7 @@ func (x *blockchainServiceSubscribeClient) Recv() (*SubscribeResponse, error) {
 // BlockchainServiceServer is the server API for BlockchainService service.
 type BlockchainServiceServer interface {
 	Address(context.Context, *AddressRequest) (*AddressResponse, error)
+	DownloadFile(context.Context, *empty.Empty) (*httpbody.HttpBody, error)
 	Subscribe(*SubscribeRequest, BlockchainService_SubscribeServer) error
 }
 
@@ -380,6 +397,9 @@ type UnimplementedBlockchainServiceServer struct {
 
 func (*UnimplementedBlockchainServiceServer) Address(ctx context.Context, req *AddressRequest) (*AddressResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Address not implemented")
+}
+func (*UnimplementedBlockchainServiceServer) DownloadFile(ctx context.Context, req *empty.Empty) (*httpbody.HttpBody, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method DownloadFile not implemented")
 }
 func (*UnimplementedBlockchainServiceServer) Subscribe(req *SubscribeRequest, srv BlockchainService_SubscribeServer) error {
 	return status.Errorf(codes.Unimplemented, "method Subscribe not implemented")
@@ -403,6 +423,24 @@ func _BlockchainService_Address_Handler(srv interface{}, ctx context.Context, de
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(BlockchainServiceServer).Address(ctx, req.(*AddressRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _BlockchainService_DownloadFile_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(empty.Empty)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(BlockchainServiceServer).DownloadFile(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/api_pb.BlockchainService/DownloadFile",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(BlockchainServiceServer).DownloadFile(ctx, req.(*empty.Empty))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -435,6 +473,10 @@ var _BlockchainService_serviceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Address",
 			Handler:    _BlockchainService_Address_Handler,
+		},
+		{
+			MethodName: "DownloadFile",
+			Handler:    _BlockchainService_DownloadFile_Handler,
 		},
 	},
 	Streams: []grpc.StreamDesc{
